public/styles/style.css
@font-face {
  font-family: "Andika";
  src: url("AndikaNewBasic-Custom-R.ttf") format("truetype");
  font-display: swap;
}

@font-face {
  font-family: "Andika";
  src: url("AndikaNewBasic-Custom-B.ttf") format("truetype");
  font-weight: bold;
  font-display: swap;
}

@font-face {
  font-family: "Andika";
  src: url("AndikaNewBasic-Custom-I.ttf") format("truetype");
  font-style: italic;
  font-display: swap;
}

@font-face {
  font-family: "Andika";
  src: url("AndikaNewBasic-Custom-BI.ttf") format("truetype");
  font-weight: bold;
  font-style: italic;
  font-display: swap;
}

body {
  color: #eee;
  background-color: #1e1e1e;
  display: flex;
  flex-direction: column;
  font-family: "Andika", sans-serif;
  height: 100vh;
  margin: 0;
}

#center {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  height: 100%;
  overflow: auto;
}

#rightBar {
  grid-column: 2 / 5;
}

#leftBar {
  grid-column: 1;
  flex: 1;
  display: flex;
  text-align: center;
}

@media (max-width: 1440px) {
  #center {
    grid-template-columns: repeat(7, 1fr);
  }

  #rightBar {
    grid-column: 3 / 8;
  }

  #leftBar {
    grid-column: 1 / 3;
  }
}

@media (max-width: 760px) {
  #center {
    grid-template-columns: repeat(9, 1fr);
  }

  #rightBar {
    grid-column: 2 / 9;
  }

  #leftBar {
    display: none;
  }
}

@media (max-width: 650px) {
  #center {
    display: block;
  }

  #rightBar {
    grid-column: 1;
  }

  #leftBar {
    display: none;
  }
}

@media (max-width: 900px) {
  .NavContent table {
    font-size: 14px;
  }
}

.hidden {
  display: none;
}

header,
nav,
footer,
main {
  padding: 12px;
  scroll-behavior: smooth;
}

main {
  flex: 1;
  font-size: 16px;
  line-height: 30px;
  /* text-align: center; */
  width: min(90%, 65rem);
  margin: auto;
}

#leftMain {
  flex: 1;
  margin-top: 72px;
}

p {
  margin: 2px;
  font-family: Andika, sans-serif;
}

ul {
  margin: 0;
  padding: 0;
}

ol {
  margin: 0.3em 0 0 1.8em;
  padding: 0;
}

.ul-column-count[data-column-count="2"] > ul,
.ul-column-count[data-column-count="2"] > ol,
.ul-column-count[data-column-count="2"] > dl {
  column-count: 2;
}
.ul-column-count[data-column-count="3"] > ul,
.ul-column-count[data-column-count="3"] > ol,
.ul-column-count[data-column-count="3"] > dl {
  column-count: 3;
}
.ul-column-count[data-column-count="4"] > ul,
.ul-column-count[data-column-count="4"] > ol,
.ul-column-count[data-column-count="4"] > dl {
  column-count: 4;
}
.ul-column-count[data-column-count="5"] > ul,
.ul-column-count[data-column-count="5"] > ol,
.ul-column-count[data-column-count="5"] > dl {
  column-count: 5;
}
.ul-column-count[data-column-count="6"] > ul,
.ul-column-count[data-column-count="6"] > ol,
.ul-column-count[data-column-count="6"] > dl {
  column-count: 6;
}

h1 {
  margin-block-start: 0em;
  margin-block-end: 0.4em;
  text-align: center;
}

h3 {
  margin-block-start: 0.3em;
  margin-block-end: 0.3em;
}

h4,
h5 {
  margin-block-start: 0.25em;
  margin-block-end: 0.25em;
}

a {
  color: rgb(181, 243, 224);
  transition: all 180ms;
}

a.inlink {
  color: rgb(93, 207, 173);
}

a.einlink {
  color: rgb(93, 207, 99);
}

a.new {
  color: #ba0000;
}

.nothing {
  color: #999;
  font-style: italic;
}

.floatright {
  clear: right;
  float: right;
}

hr {
  border-color: #eee;
}

input {
  border: 1px solid #aaa;
  border-radius: 5px;
  font-size: 14px;
  padding: 5px;
}

table {
  text-align: left;
  border-collapse: collapse;
  border-color: #aaa;
  margin: 16px auto 24px;
  background-color: #212121;
  line-height: 1.3;
}

table.quick {
  width: 100%;
  font-size: 18px;
  color: #faf;
  background-color: #1e1e1e;
}

table.quick th {
  font-weight: normal;
  text-align: right;
  padding-right: 4px;
  width: 50%;
}

table.quick td {
  text-align: left;
  width: 50%;
}

table.quick tr.gap td,
table.quick tr.gap th {
  padding-top: 1.5rem;
}

table.quick .footnote {
  text-decoration: underline;
}

th,
td {
  padding: 4px 12px 8px;
}

tr:target,
li:target {
  background-color: #50503e;
}

.hl {
  font-weight: bold;
  text-align: center;
}

summary h3 {
  display: inline;
}

.freqlist {
  text-align: center;
}

.freqlist span {
  margin-right: 0.5rem;
}

a:active,
a:hover {
  color: #ed89a9;
  text-decoration: underline;
}

button,
input[type="button"],
input[type="submit"] {
  background-color: #b9474e;
  color: #fff;
}

input#query {
  height: 3rem;
  padding: 0.9rem 0.85rem;
  margin-bottom: 1.5rem;
  border-radius: 0.6rem;
  background-color: #212121;
  color: #ddd;
  width: 100%;
}

.loader {
  border: 0.5rem solid #eee;
  border-top: 0.5rem solid #ed89a9;
  border-radius: 50%;
  width: 2rem;
  height: 2rem;
  animation: spin 2s linear infinite;
  margin: auto;
}

.loader.quick {
  border-top: 0.5rem solid #faf;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

main .interproject-box {
  background-color: #212121 !important;
}

.interProject {
  display: none;
}

